# chatWeb3

./: .gitignore  .vercelignore  LICENSE  Makefile  Procfile  README.md  ai-plugin.json  chat_ui.py  create_agent.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  vercel.json
api/: api_endpoints.py  fastapi.py  main.py
api/gradio/: gradio_app.py  gradio_runner.py  gradio_ui.py
api/routers/: well_known.py
api/services/: blockchain_data.py  crypto_data.py
chatweb3/: create_agent.py  metadata_parser.py  snowflake_database.py  utils.py
chatweb3/agents/: __init__.py  agent.py
chatweb3/agents/agent_toolkits/: __init__.py
chatweb3/agents/agent_toolkits/snowflake/: base.py  prompt.py  toolkit.py  toolkit_custom.py
chatweb3/agents/chat/: base.py  output_parser.py  prompt.py
chatweb3/agents/conversational_chat/: base.py  output_parser.py  prompt.py
chatweb3/callbacks/: logger_callback.py
chatweb3/tools/: base.py
chatweb3/tools/snowflake_database/: constants.py  prompt.py  tool.py  tool_custom.py
config/: config.py  config.yaml  logging_config.py
data/metadata/: annotation_ethereum_core_defi_nft_price.json  annotation_ethereum_core_defi_nft_price_v3.json  annotation_ethereum_core_v1.json  context_ethereum_core.json  context_ethereum_core_defi_nft_price.json  context_ethereum_is_core_defi_nft_price_v3.json
tests/: conftest.py
tests/integration_tests/: test_fastapi_flipside.py  test_metadata_parser.py  test_snowflake_database.py  test_tool_custom.py
tests/unit_tests/: test_chat.py  test_create_agent.py  test_crypto_data_service.py  test_fastapi.py  test_gradio_app.py  test_logging_config.py  test_query_blockchain_data.py  test_utils.py
