[tool.poetry]
name = "chatweb3"
version = "0.1.1"
description = "ChatWeb3 - ChatGPT for blockchain and crypto data analysis"
authors = ["inWeb3"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/inWeb3ai/chatWeb3"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.103.1"
requests = ">=2.29.0"
uvicorn = ">=0.23.2"
gradio = ">=3.18.0"
langchain = ">=0.0.279"
# langchain = { path = "langchain/libs/langchain", develop = true }
openai = ">=0.27.2"
python-dotenv = ">=0.21.1"
shroomdk = ">=2.0.7"
sqlalchemy = ">=1.4.48"
loguru = "^0.7.0"
flipside = "^2.0.8"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pytest-socket = ">=0.6.0"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.lint.dependencies]
ruff = ">=0.0.249"
types-toml = ">=0.10.8.1"
black = ">=23.1.0"
isort = "^5.12.0"

[tool.poetry.group.typing.dependencies]
mypy = ">=0.991"
types-pyyaml = ">=6.0.12.2"
types-requests = ">=2.28.11.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[tool.poetry.scripts]
chatWeb3-fastapi = "api.main:start"
chatWeb3-gradio = "api.gradio.gradio_runner:run_gradio"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
# whats is a typo but used frequently in queries so kept as is
# aapply - async apply
# unsecure - typo but part of API, decided to not bother for now
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
